# heuristic-archive

./: .gitignore  .gitmodules  A  A.cpp  B.cpp  C.cpp  Makefile  README.md  _err_new  _out  _out_new  a.out  generate_meta.py  gmon.out  main  main.cpp  main_asan  memo.md  out  output  pahcer_config.toml  params.hpp  pre  problem.md  restructure.sh  sample.py  sample_output_12.txt  sample_output_17.txt  sample_output_34.txt  solution.md  submission.cpp  terry.rs  tmp.cpp  tuner  vis.html
.claude/: settings.local.json
.claude/skills/visualizer/assets/template/wasm/: Cargo.toml
AHC001/: meta.json
AHC002/: README.md  meta.json
AHC003/: meta.json
AHC004/: meta.json
AHC005/: README.md  a.out  meta.json
AHC006/: meta.json
AHC007/: meta.json
AHC008/: README.md  meta.json
AHC009/: meta.json
AHC010/: meta.json
AHC011/: meta.json
AHC012/: meta.json
AHC013/: meta.json
AHC014/: meta.json
AHC015/: meta.json
AHC016/: meta.json
AHC017/: meta.json
AHC018/: meta.json
AHC019/: README.md  memo.md  meta.json  out  pre
AHC020/: README.md  main.cpp  memo.md  meta.json
AHC021/: README.md  meta.json
AHC022/: README.md  memo.md  meta.json
AHC023/: README.md  memo.md  meta.json  now.cpp
AHC024/: README.md  meta.json
AHC025/: README.md  meta.json
AHC026/: README.md  meta.json
AHC027/: .gitignore  README.md  memo.md  meta.json  pre
AHC028/: README.md  main  memo.md  meta.json  pre
AHC029/: .gitignore  README.md  meta.json
AHC030/: README.md  (+2 more)
sor4chi/solver/: Cargo.toml
sor4chi/solver/src/: io.rs
sor4chi/solver/src/solver/: greedy.rs
(+1215 files in other folders)
