[package]
name = "vis-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
# TODO: tools/ の Cargo.toml から必要な依存をコピー
# 例: rand, rand_chacha, itertools, etc.
# 注意: proconio は削除 (stdin不可), svg は任意

[profile.release]
opt-level = "s"
lto = true
